--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="imatges/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="imatges/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" type="image/png" sizes="192x192" href="imatges/favicon-192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="imatges/favicon-512.png">
-    <meta property="og:title" content="Renoms de les Cases de Matadepera">
-    <meta property="og:description" content="Recull de renoms històrics de les cases del nucli antic de Matadepera, classificats per carrers i situats al mapa.">
-    <meta property="og:image" content="imatges/og-image.jpg">
+    <link rel="icon" href="https://renoms-matadepera.github.io/contingut/imatges/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://renoms-matadepera.github.io/contingut/imatges/apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://renoms-matadepera.github.io/contingut/imatges//favicon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://renoms-matadepera.github.io/contingut/imatges/favicon-512.png">
+    <meta property="og:title" content="Fonts - Renoms de les Cases de Matadepera">
+    <meta property="og:description" content="Recull de renoms històrics de les cases del nucli antic de Matadepera. Aquest projecte no hauria estat possible sense la generositat de molta gent.">
+    <meta property="og:image" content="https://renoms-matadepera.github.io/contingut/imatges/og-image.jpg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ca_ES">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/styles.css?v=1">
-    <title>Renoms de les Cases de Matadepera</title>
+    <title>Fonts - Renoms de les Cases de Matadepera</title>
 </head>
 <body>
 <header>
