--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="contingut/css/styles.css?v=1">
     <title>Renoms de les Cases de Matadepera</title>
+    <meta name="description" content='Quan dir "Sóc de cal..." era més important que el cognom o l’adreça. Un comentari fora de lloc, un fet graciós, un diminutiu o la professió podien ser suficients per imposar un renom o malnom que identificava la família per sempre.'>
 </head>
 <body>
 <header>
