--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -15,6 +15,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/styles.css?v=1">
     <title>Llistat dels renoms històrics de les Cases de Matadepera</title>
+    <meta name="description" content="Llistat dels de renoms històrics de les cases del nucli antic de Matadepera, classificats per carrers.">
 </head>
 <body>
 <header>
