--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -15,6 +15,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/styles.css?v=1">
     <title>Fonts - Renoms de les Cases de Matadepera</title>
+    <meta name="description" content="Recull de renoms històrics de les cases del nucli antic de Matadepera. Aquest projecte no hauria estat possible sense la generositat de molta gent.">
+</head>
 </head>
 <body>
 <header>
