--- a/contingut/mapa.html
+++ b/contingut/mapa.html
@@ -15,6 +15,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/styles.css?v=1">
     <title>Mapa - Renoms de les Cases de Matadepera</title>
+    <meta name="description" content="Mapa de la situació dels renoms històrics de les cases del nucli antic de Matadepera, classificats per carrers i situats al mapa.">
 </head>
 <body>
 <header>
