--- a/contingut/quisom.html
+++ b/contingut/quisom.html
@@ -15,6 +15,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="css/styles.css?v=1">
     <title>Qui Som - Renoms de les Cases de Matadepera</title>
+    <meta name="description" content="Recull de renoms històrics de Matadepera. Autors: Llorenç Robert de Cal Genet i Marc Sellarès de Cal Ferreret.">
+</head>
 </head>
 <body>
 <header>
