--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -372,7 +372,7 @@ Ca la Nita</td>
 </tr>
 <tr>
     <td>84</td>
-    <td><button class="info-link" onclick="openInfo('cal-perrot')">Cal Perrot</button></td>
+    <td><button class="info-link" onclick="openInfo('cal-parrot')">Cal Parrot</button></td>
     <td>Cal Tofunarire</td>
 </tr>
 <tr>
@@ -583,7 +583,7 @@ Ca l'Abuela</td>
 </tr>
 <tr>
     <td>6A</td>
-    <td>Cal Joan Sort</td>
+    <td><button class="info-link" onclick="openInfo('cal-joan-sord')">Cal Joan Sord</button></td>
     <td></td>
 </tr>
 <tr>
@@ -787,7 +787,7 @@ Cal Guerresenyo</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=25082025"></script>
+<script src="js/info-panels.js?v=27082025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
