--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -54,6 +54,7 @@ Ramón Comasòlives Font de <em>Cal Mingo</em>.<br>
 Àngeleta Bosch Borrell de <em>Cal Croc-Croc</em>.<br>
 Joan Ventayol Sala <em>“Saletes”</em>.<br>
 Mercè Rusiñol Font.<br>
+Paquita Farres i Lladó de <em>Cal Parot</em>.<br> 
 Joan Pi Puig de <em>Cal Xumeco</em>.<br>
 Pere Pi Puig de <em>Cal Xumeco</em>.<br>
 Montserrat Segura Cortés de <em>Cal Quistó</em>.<br>
@@ -85,13 +86,13 @@ Sergi Adell Bruguera de <em>Cal Rebenta Sabaters</em>.</p>
 <p><em>Esperem no haver-nos oblidat ningú. Si és així, us demanem disculpes sincerament.</em></p>
 <p>El nostre més sincer agraïment a tots per la vostra paciència, la vostra dedicació desinteressada i la confiança amb què ens heu acollit i ajudat.</p>
 <p><strong>Gràcies per preservar, amb nosaltres, un tros de la memòria del poble.</strong></p>
-<p>Els autors: <a href="quisom.html">Llorenç Robert Lairla de <em>Cal Genet</em> i Marc Sellarès Genescà de <em>Cal ferreret</em></a>.</p>
-<p>&nbsp;</p>
+<p style="text-align: right;">Els autors: <a href="quisom.html">Llorenç Robert Lairla de <em>Cal Genet</em> i Marc Sellarès Genescà de <em>Cal ferreret</em></a>.</p>
 <p>A més dels testimonis orals, aquesta recerca s’ha enriquit amb documents i publicacions de grans coneixedors de la història local, molts dels quals ja no són entre nosaltres, que han permès contrastar i completar la informació recollida.</p>
 <p><strong>Fonts documentals:</strong><br>
 • <strong>AMMAT</strong> - Arxiu Municipal de Matadepera.<br>
 &nbsp;&nbsp;- Padrons 1896, 1912.<br>
-&nbsp;&nbsp;- Registres Cementiri de Matadepera, 1926-1975.</p>
+&nbsp;&nbsp;- Registres Cementiri de Matadepera, 1926-1975.<br>
+• <strong>RCM</strong> - Registre Civil de Matadepera.</p>
 <p><strong>Publicacions:</strong><br>
 • Programes Festa Major de Matadepera 1944 i 1950 - Anuncis<br>
 • Programa Festa Major de Matadepera 1973<br>
