--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -72,6 +72,8 @@ Mercè Genescà Puig de <em>Cal Marcó</em>.<br>
 Marta Soley Cardona de <em>Cal Arturo de Badalona</em>.<br>
 Emili Riba Gorina de <em>Cal Motxo</em>.<br>
 Francesc Gorina Arnau de <em>Cal Motxo</em>.<br>
+Enric Genesca Garrigosa de <em>Cal Estevet</em>.<br>
+Anna Genesca Garrigosa de <em>Cal Estevet</em>.<br>
 Maria Antonia Sellarès de <em>Cal Ferreret</em>.<br>
 Maria Antonia Gutés Turu de <em>Cal Monet</em>.<br>
 Teresina Cases Beltrà de <em>Cal Beltrà</em>.<br>
