--- a/contingut/mapa.html
+++ b/contingut/mapa.html
@@ -13,6 +13,9 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ca_ES">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="author" content="Llorenç Robert Lairla, Marc Sellarès Genescà">
+    <meta name="designer" content="Marc Sellarès Genescà">
+    <meta name="copyright" content="© Marc Sellarès Genescà, 2025">
     <link rel="stylesheet" href="css/styles.css?v=1">
     <title>Mapa - Renoms de les Cases de Matadepera</title>
     <meta name="description" content="Mapa de la situació dels renoms històrics de les cases del nucli antic de Matadepera, classificats per carrers i situats al mapa.">
