--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -49,49 +49,221 @@
 <p><strong>Aquest projecte no hauria estat possible sense la generositat de molta gent</strong> que ens ha obert les portes de casa seva i, sobretot, de la seva memòria.</p>
 <p>Volem agrair especialment a les persones més grans del poble, algunes amb més de cent anys o en situació de salut fràgil, que ens han rebut amb calidesa i <strong>han estat testimonis clau</strong>, compartint —sovint amb emoció— records, anècdotes i vivències d’èpoques passades.</p>
 <p>També a molta gent de la nostra generació, que encara conserva els records dels renoms de les seves i altres cases, i a tothom que ha volgut col·laborar amb paciència, interès i entusiasme en aquesta recerca, de vegades fins i tot amb trobades espontànies pel carrer.</p>
-<p><strong>Testimonis:</strong><br>
-Maria Pi Gutés de <em>Ca la Bona Maria</em>.<br>
-Magdalena Font Utset de <em>Cal Corcola</em>.<br>
-Joan Comasòlives Font de <em>Cal Mingo</em>.<br>
-Ramón Comasòlives Font de <em>Cal Mingo</em>.<br>
-Àngeleta Bosch Borrell de <em>Cal Croc-Croc</em>.<br>
-Joan Ventayol Sala <em>“Saletes”</em>.<br>
-Mercè Rusiñol Font.<br>
-Paquita Farres i Lladó de <em>Cal Parot</em>.<br> 
-Joan Pi Puig de <em>Cal Xumeco</em>.<br>
-Pere Pi Puig de <em>Cal Xumeco</em>.<br>
-Montserrat Segura Cortés de <em>Cal Quistó</em>.<br>
-Montserrat Lladó Puig de <em>Cal Sidro</em>.<br>
-Pere Martínez Martínez, <em>el Peret de Can Arnella</em>.<br>
-Pere Riba Satlari de <em>Ca l'Angelet</em>.<br>
-Lidia Puig Torras de <em>Cal Peret S'Escanya</em>.<br>
-Pere Porcar Busquets de <em>Cal Tanta</em>.<br>
-Llorenç Pomar Argerich de <em>Cal Arangader</em>.<br>
-Joan Garcia Riba de <em>Cal Pintoret</em>.<br>
-Joan Sansó Ramón de <em>Cal Muletes</em>.<br>
-Anna Maria Pi Capel de <em>Cal Niel</em>.<br>
-Rosa Maria Altimira Sanz de <em>Cal Cesc de can Roure</em>.<br>
-Mercè Genescà Puig de <em>Cal Marcó</em>.<br>
-Marta Soley Cardona de <em>Cal Arturo de Badalona</em>.<br>
-Emili Riba Gorina de <em>Cal Motxo</em>.<br>
-Francesc Gorina Arnau de <em>Cal Motxo</em>.<br>
-Enric Genesca Garrigosa de <em>Cal Estevet</em>.<br>
-Anna Genesca Garrigosa de <em>Cal Estevet</em>.<br>
-Maria Antonia Sellarès de <em>Cal Ferreret</em>.<br>
-Maria Antonia Gutés Turu de <em>Cal Monet</em>.<br>
-Teresina Cases Beltrà de <em>Cal Beltrà</em>.<br>
-Josep Beltrà Julià de <em>Cal Beltrà</em>.<br>
-Ramon Gutés Martínez de <em>Cal Trapet</em>.<br>
-Cesca Arnau Portell de <em>Cal Jepet</em>.</br>
-Isabel Busqueta Fuertes de <em>Cal Macià</em>.<br>
-Lidia Grané Calvo de <em>Cal Picarrocs</em>.<br>
-Rosa Ventayol Godina de <em>Cal Saltlari</em>.<br>
-Josep Mas Arnau de <em>Cal Mando</em>.<br>
-Sergi Adell Bruguera de <em>Cal Rebenta Sabaters</em>.</p>
+<p><strong>Testimonis:</strong></p>
+<div class="testimonis">
+
+  <div class="testimoni">
+    <span class="nom">Sergi</span>
+    <span class="cognoms">Adell Bruguera</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Rebenta Sabaters</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Rosa Maria</span>
+    <span class="cognoms">Altimira Sanz</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Cesc de can Roure</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Cesca</span>
+    <span class="cognoms">Arnau Portell</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Jepet</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Josep</span>
+    <span class="cognoms">Beltrà Julià</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Beltrà</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Teresina</span>
+    <span class="cognoms">Cases Beltrà</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Beltrà</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Àngeleta</span>
+    <span class="cognoms">Bosch Borrell</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Croc-Croc</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Isabel</span>
+    <span class="cognoms">Busqueta Fuertes</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Macià</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Joan</span>
+    <span class="cognoms">Comasòlives Font</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Mingo</em>.</span>
+  </div>
+  <div class="testimoni">
+    <span class="nom">Ramón</span>
+    <span class="cognoms">Comasòlives Font</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Mingo</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Paquita</span>
+    <span class="cognoms">Farres i Lladó</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Parot</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Enric</span>
+    <span class="cognoms">Genesca Garrigosa</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Estevet</em>.</span>
+  </div>
+  <div class="testimoni">
+    <span class="nom">Anna</span>
+    <span class="cognoms">Genesca Garrigosa</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Estevet</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Mercè</span>
+    <span class="cognoms">Genescà Puig</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Marcó</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Lidia</span>
+    <span class="cognoms">Grané Calvo</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Picarrocs</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Francesc</span>
+    <span class="cognoms">Gorina Arnau</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Motxo</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Maria Antonia</span>
+    <span class="cognoms">Gutés Turu</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Monet</em>.</span>
+  </div>
+  <div class="testimoni">
+    <span class="nom">Ramon</span>
+    <span class="cognoms">Gutés Martínez</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Trapet</em>.</span>
+  </div>
+  <div class="testimoni">
+    <span class="nom">Maria</span>
+    <span class="cognoms">Pi Gutés</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Ca la Bona Maria</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Josep</span>
+    <span class="cognoms">Mas Arnau</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Mando</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Pere</span>
+    <span class="cognoms">Martínez Martínez</span>
+    <span class="renom"><em>el Peret de Can Arnella</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Lidia</span>
+    <span class="cognoms">Puig Torras</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Peret S'Escanya</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Joan</span>
+    <span class="cognoms">Pi Puig</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Xumeco</em>.</span>
+  </div>
+  <div class="testimoni">
+    <span class="nom">Pere</span>
+    <span class="cognoms">Pi Puig</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Xumeco</em>.</span>
+  </div>
+  <div class="testimoni">
+    <span class="nom">Anna Maria</span>
+    <span class="cognoms">Pi Capel</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Niel</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Llorenç</span>
+    <span class="cognoms">Pomar Argerich</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Arangader</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Pere</span>
+    <span class="cognoms">Porcar Busquets</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Tanta</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Emili</span>
+    <span class="cognoms">Riba Gorina</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Motxo</em>.</span>
+  </div>
+  <div class="testimoni">
+    <span class="nom">Pere</span>
+    <span class="cognoms">Riba Satlari</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Angelet</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Mercè</span>
+    <span class="cognoms">Rusiñol Font</span>
+    <span class="renom"></span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Joan</span>
+    <span class="cognoms">Sansó Ramón</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Muletes</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Maria Antonia</span>
+    <span class="cognoms">Sellarès</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Ferreret</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Montserrat</span>
+    <span class="cognoms">Segura Cortés</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Quistó</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Marta</span>
+    <span class="cognoms">Soley Cardona</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Arturo de Badalona</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Joan</span>
+    <span class="cognoms">Ventayol Sala</span>
+    <span class="renom"><em>“Saletes”</em>.</span>
+  </div>
+  <div class="testimoni">
+    <span class="nom">Rosa</span>
+    <span class="cognoms">Ventayol Godina</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Saltlari</em>.</span>
+  </div>
+
+</div>
+
 <p><em>Esperem no haver-nos oblidat ningú. Si és així, us demanem disculpes sincerament.</em></p>
 <p>El nostre més sincer agraïment a tots per la vostra paciència, la vostra dedicació desinteressada i la confiança amb què ens heu acollit i ajudat.</p>
 <p><strong>Gràcies per preservar, amb nosaltres, un tros de la memòria del poble.</strong></p>
-<p style="text-align: right;">Els autors: <a href="quisom.html">Llorenç Robert Lairla de <em>Cal Genet</em> i Marc Sellarès Genescà de <em>Cal ferreret</em></a>.</p>
+<p style="text-align: right;font-size: 0.95em;"><em>
+<a href="quisom.html">Llorenç Robert Lairla</a> de Cal Genet&nbsp;&nbsp;&nbsp;<br>
+<a href="quisom.html">Marc Sellarès Genescà</a> de Cal Ferreret</em>
+</p>
+
 <p>A més dels testimonis orals, aquesta recerca s’ha enriquit amb documents i publicacions de grans coneixedors de la història local, molts dels quals ja no són entre nosaltres, que han permès contrastar i completar la informació recollida.</p>
 <p><strong>Fonts documentals:</strong><br>
 • <strong>AMMAT</strong> - Arxiu Municipal de Matadepera.<br>
@@ -110,7 +282,7 @@ Sergi Adell Bruguera de <em>Cal Rebenta Sabaters</em>.</p>
 &nbsp;&nbsp;&nbsp;&nbsp;- Reproducció d'un facsímil original de 1925 del "Montepio de Sant Sebastían"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;- 1920 a 1930 segons un Matadeperenc del segle passat. Narcís Riba Arnau "Siset"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;- Orla Festa de vellesa<br>
-• Exposició Pomar i Orriols "Homes de Matadepera". Facebook. Llorenç Pomar Argerich de <em>Cal Arangader</em></p>
+• Exposició Pomar i Orriols "Homes de Matadepera". Facebook. Llorenç Pomar Argerich de&nbsp;&nbsp;<em>Cal Arangader</em></p>
 <p><strong>Bibliografia:</strong><br>
 • Els Orígens del Nou Poble de Matadepera 1768 - 1868. - Manel Ametller Bassets – 1997<br>
 • Matadepera Fins Ara. Miquel Ballbé Boada - 1994<br>
