--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -227,7 +227,7 @@
 
   <div class="testimoni">
     <span class="nom">Maria Antonia</span>
-    <span class="cognoms">Sellarès</span>
+    <span class="cognoms">Sellarès Genescà</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Ferreret</em>.</span>
   </div>
 
