--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -77,12 +77,6 @@
   </div>
 
   <div class="testimoni">
-    <span class="nom">Teresina</span>
-    <span class="cognoms">Cases Beltrà</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Beltrà</em>.</span>
-  </div>
-
-  <div class="testimoni">
     <span class="nom">Àngeleta</span>
     <span class="cognoms">Bosch Borrell</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Croc-Croc</em>.</span>
@@ -94,6 +88,12 @@
     <span class="renom">de&nbsp;&nbsp;<em>Cal Macià</em>.</span>
   </div>
 
+  <div class="testimoni">
+    <span class="nom">Teresina</span>
+    <span class="cognoms">Cases Beltrà</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Beltrà</em>.</span>
+  </div>
+  
   <div class="testimoni">
     <span class="nom">Joan</span>
     <span class="cognoms">Comasòlives Font</span>
@@ -110,15 +110,27 @@
     <span class="cognoms">Farres i Lladó</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Parot</em>.</span>
   </div>
-
+  
+  <div class="testimoni">
+    <span class="nom">Magdalena</span>
+    <span class="cognoms">Font Utset</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Corcola</em>.</span>
+  </div>
+  
+  <div class="testimoni">
+    <span class="nom">Joan</span>
+    <span class="cognoms">Garcia Riba</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Pintoret</em>.</span>
+  </div>
+  
   <div class="testimoni">
     <span class="nom">Enric</span>
-    <span class="cognoms">Genesca Garrigosa</span>
+    <span class="cognoms">Genescà Garrigosa</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Estevet</em>.</span>
   </div>
   <div class="testimoni">
     <span class="nom">Anna</span>
-    <span class="cognoms">Genesca Garrigosa</span>
+    <span class="cognoms">Genescà Garrigosa</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Estevet</em>.</span>
   </div>
 
@@ -127,7 +139,13 @@
     <span class="cognoms">Genescà Puig</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Marcó</em>.</span>
   </div>
-
+  
+  <div class="testimoni">
+    <span class="nom">Francesc</span>
+    <span class="cognoms">Gorina Arnau</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Motxo</em>.</span>
+  </div>
+  
   <div class="testimoni">
     <span class="nom">Lidia</span>
     <span class="cognoms">Grané Calvo</span>
@@ -135,31 +153,21 @@
   </div>
 
   <div class="testimoni">
-    <span class="nom">Francesc</span>
-    <span class="cognoms">Gorina Arnau</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Motxo</em>.</span>
-  </div>
-
-  <div class="testimoni">
     <span class="nom">Maria Antonia</span>
     <span class="cognoms">Gutés Turu</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Monet</em>.</span>
   </div>
+
   <div class="testimoni">
     <span class="nom">Ramon</span>
     <span class="cognoms">Gutés Martínez</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Trapet</em>.</span>
   </div>
+  
   <div class="testimoni">
-    <span class="nom">Maria</span>
-    <span class="cognoms">Pi Gutés</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Ca la Bona Maria</em>.</span>
-  </div>
-
-  <div class="testimoni">
-    <span class="nom">Josep</span>
-    <span class="cognoms">Mas Arnau</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Mando</em>.</span>
+    <span class="nom">Montserrat</span>
+    <span class="cognoms">Lladó Puig</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Sidro</em>.</span>
   </div>
 
   <div class="testimoni">
@@ -167,27 +175,35 @@
     <span class="cognoms">Martínez Martínez</span>
     <span class="renom"><em>el Peret de Can Arnella</em>.</span>
   </div>
-
+  
   <div class="testimoni">
-    <span class="nom">Lidia</span>
-    <span class="cognoms">Puig Torras</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Peret S'Escanya</em>.</span>
+    <span class="nom">Josep</span>
+    <span class="cognoms">Mas Arnau</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Mando</em>.</span>
   </div>
-
+  
+  <div class="testimoni">
+    <span class="nom">Anna Maria</span>
+    <span class="cognoms">Pi Capel</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Niel</em>.</span>
+  </div>
+  
+  <div class="testimoni">
+    <span class="nom">Maria</span>
+    <span class="cognoms">Pi Gutés</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Ca la Bona Maria</em>.</span>
+  </div>
+  
   <div class="testimoni">
     <span class="nom">Joan</span>
     <span class="cognoms">Pi Puig</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Xumeco</em>.</span>
   </div>
+  
   <div class="testimoni">
     <span class="nom">Pere</span>
     <span class="cognoms">Pi Puig</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Xumeco</em>.</span>
-  </div>
-  <div class="testimoni">
-    <span class="nom">Anna Maria</span>
-    <span class="cognoms">Pi Capel</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Niel</em>.</span>
   </div>
 
   <div class="testimoni">
@@ -201,7 +217,13 @@
     <span class="cognoms">Porcar Busquets</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Tanta</em>.</span>
   </div>
-
+  
+  <div class="testimoni">
+    <span class="nom">Lidia</span>
+    <span class="cognoms">Puig Torras</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Peret S'Escanya</em>.</span>
+  </div>
+  
   <div class="testimoni">
     <span class="nom">Emili</span>
     <span class="cognoms">Riba Gorina</span>
@@ -224,17 +246,17 @@
     <span class="cognoms">Sansó Ramón</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Muletes</em>.</span>
   </div>
-
-  <div class="testimoni">
-    <span class="nom">Maria Antonia</span>
-    <span class="cognoms">Sellarès Genescà</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Ferreret</em>.</span>
-  </div>
-
+  
   <div class="testimoni">
     <span class="nom">Montserrat</span>
     <span class="cognoms">Segura Cortés</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Quistó</em>.</span>
+  </div>
+  
+  <div class="testimoni">
+    <span class="nom">Maria Antonia</span>
+    <span class="cognoms">Sellarès Genescà</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Ferreret</em>.</span>
   </div>
 
   <div class="testimoni">
