--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -49,7 +49,8 @@
 <p><strong>Aquest projecte no hauria estat possible sense la generositat de molta gent</strong> que ens ha obert les portes de casa seva i, sobretot, de la seva memòria.</p>
 <p>Volem agrair especialment a les persones més grans del poble, algunes amb més de cent anys o en situació de salut fràgil, que ens han rebut amb calidesa i <strong>han estat testimonis clau</strong>, compartint —sovint amb emoció— records, anècdotes i vivències d’èpoques passades.</p>
 <p>També a molta gent de la nostra generació, que encara conserva els records dels renoms de les seves i altres cases, i a tothom que ha volgut col·laborar amb paciència, interès i entusiasme en aquesta recerca, de vegades fins i tot amb trobades espontànies pel carrer.</p>
-<p><strong>Testimonis:</strong></p>
+
+<p style="margin-bottom: .3em;"><strong>Testimonis:</strong></p>
 <div class="testimonis">
 
   <div class="testimoni">
@@ -126,12 +127,12 @@
   <div class="testimoni">
     <span class="nom">Enric</span>
     <span class="cognoms">Genescà Garrigosa</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Estevet</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Estevet</em>.</span>
   </div>
   <div class="testimoni">
     <span class="nom">Anna</span>
     <span class="cognoms">Genescà Garrigosa</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Estevet</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Estevet</em>.</span>
   </div>
 
   <div class="testimoni">
@@ -153,7 +154,7 @@
   </div>
 
   <div class="testimoni">
-    <span class="nom">Maria Antonia</span>
+    <span class="nom">M. Antònia</span>
     <span class="cognoms">Gutés Turu</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Monet</em>.</span>
   </div>
@@ -183,7 +184,7 @@
   </div>
   
   <div class="testimoni">
-    <span class="nom">Anna Maria</span>
+    <span class="nom">Anna M.</span>
     <span class="cognoms">Pi Capel</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Niel</em>.</span>
   </div>
@@ -209,7 +210,7 @@
   <div class="testimoni">
     <span class="nom">Llorenç</span>
     <span class="cognoms">Pomar Argerich</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Arangader</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Arangader</em>.</span>
   </div>
 
   <div class="testimoni">
@@ -254,7 +255,7 @@
   </div>
   
   <div class="testimoni">
-    <span class="nom">Maria Antonia</span>
+    <span class="nom">M. Antònia</span>
     <span class="cognoms">Sellarès Genescà</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Ferreret</em>.</span>
   </div>
@@ -262,7 +263,7 @@
   <div class="testimoni">
     <span class="nom">Marta</span>
     <span class="cognoms">Soley Cardona</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Arturo de Badalona</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Arturo de Badalona</em>.</span>
   </div>
 
   <div class="testimoni">
@@ -304,7 +305,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;- Reproducció d'un facsímil original de 1925 del "Montepio de Sant Sebastían"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;- 1920 a 1930 segons un Matadeperenc del segle passat. Narcís Riba Arnau "Siset"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;- Orla Festa de vellesa<br>
-• Exposició Pomar i Orriols "Homes de Matadepera". Facebook. Llorenç Pomar Argerich de&nbsp;&nbsp;<em>Cal Arangader</em></p>
+• Exposició Pomar i Orriols "Homes de Matadepera". Facebook. Llorenç Pomar Argerich de <em>Ca l'Arangader</em></p>
 <p><strong>Bibliografia:</strong><br>
 • Els Orígens del Nou Poble de Matadepera 1768 - 1868. - Manel Ametller Bassets – 1997<br>
 • Matadepera Fins Ara. Miquel Ballbé Boada - 1994<br>
