--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -51,7 +51,7 @@
 <p>També a molta gent de la nostra generació, que encara conserva els records dels renoms de les seves i altres cases, i a tothom que ha volgut col·laborar amb paciència, interès i entusiasme en aquesta recerca, de vegades fins i tot amb trobades espontànies pel carrer.</p>
 
 <p style="margin-bottom: .3em;"><strong>Testimonis:</strong></p>
-<div class="testimonis">
+<div class="testimonis fonts-doc">
 
   <div class="testimoni">
     <span class="nom">Sergi</span>
@@ -289,11 +289,14 @@
 
 <p>A més dels testimonis orals, aquesta recerca s’ha enriquit amb documents i publicacions de grans coneixedors de la història local, molts dels quals ja no són entre nosaltres, que han permès contrastar i completar la informació recollida.</p>
 <p><strong>Fonts documentals:</strong><br>
+<span class="fonts-doc">
 • <strong>AMMAT</strong> - Arxiu Municipal de Matadepera.<br>
 &nbsp;&nbsp;- Padrons 1896, 1912.<br>
 &nbsp;&nbsp;- Registres Cementiri de Matadepera, 1926-1975.<br>
 • <strong>RCM</strong> - Registre Civil de Matadepera.</p>
+</span>
 <p><strong>Publicacions:</strong><br>
+<span class="fonts-doc">
 • Programes Festa Major de Matadepera 1944 i 1950 - Anuncis<br>
 • Programa Festa Major de Matadepera 1973<br>
 &nbsp;&nbsp;&nbsp;&nbsp;- Relació dels nois de la fotografia de l'escola Nacional 1912. Joan Font Pi "Corcola"<br>
@@ -306,7 +309,9 @@
 &nbsp;&nbsp;&nbsp;&nbsp;- 1920 a 1930 segons un Matadeperenc del segle passat. Narcís Riba Arnau "Siset"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;- Orla Festa de vellesa<br>
 • Exposició Pomar i Orriols "Homes de Matadepera". Facebook. Llorenç Pomar Argerich de <em>Ca l'Arangader</em></p>
+</span>
 <p><strong>Bibliografia:</strong><br>
+<span class="fonts-doc">
 • Els Orígens del Nou Poble de Matadepera 1768 - 1868. - Manel Ametller Bassets – 1997<br>
 • Matadepera Fins Ara. Miquel Ballbé Boada - 1994<br>
 • Masos i pairalies de Matadepera. Miquel Ballbé Boada - 1985<br>
@@ -314,6 +319,7 @@
 • Dietari de Francesc Gorina i Riera, pagès de Matadepera, 1841-1904. Joan Comasòlivas i Font – 2003<br>
 • El sac dels records. Memòries. Josep M. Ballarín Monset<br>
 • Pròleg Matadepera Cent Anys de vida Coral. Josep M. Ballarín Monset</p>
+</span>
 <p>&nbsp;</p>
 </main>
 <footer>
