--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -97,13 +97,19 @@ Llistat de carrers:<br>
     <td></td>
 </tr>
 <tr>
+    <td>11</td>
+    <td><button class="info-link" onclick="openInfo('ca-lestevet')">Ca l'Estevet</button></td>
+    <td>Villa Catalina<br>
+Cal Barret</td>
+</tr>
+<tr>
     <td>13</td>
     <td><button class="info-link" onclick="openInfo('cal-negre')">Cal Negre</button></td>
     <td></td>
 </tr>
 <tr>
     <td>14</td>
-    <td><button class="info-link" onclick="openInfo('cal-barret')">Cal Barret</button></td>
+    <td><button class="info-link" onclick="openInfo('ca-l’enriquet')">Ca l’Enriquet</button></td>
     <td></td>
 </tr>
 <tr>
@@ -226,7 +232,7 @@ Cal Peta-peta</td>
 </tr>
 <tr>
     <td>44</td>
-    <td>Ca l'Asuncion</td>
+    <td><button class="info-link" onclick="openInfo('ca-lassuncion')">Ca l'Assuncion</button></td>
     <td></td>
 </tr>
 <tr>
@@ -790,7 +796,7 @@ Cal Guerresenyo</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=27082025"></script>
+<script src="js/info-panels.js?v=31082025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
