--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -659,6 +659,11 @@ Cal Guerresenyo</td>
     <td></td>
 </tr>
 <tr>
+    <td>33</td>
+    <td><button class="info-link" onclick="openInfo('ca-la-marcelina')">Ca la Marcelina</button></td>
+    <td></td>
+</tr>
+<tr>
     <td>Plaça</td>
     <td><button class="info-link" onclick="openInfo('cal-baldiró')">Cal Baldiró</button></td>
     <td>Cal Tut</td>
@@ -796,7 +801,7 @@ Cal Guerresenyo</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=1092025"></script>
+<script src="js/info-panels.js?v=08092025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
