--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -84,6 +84,12 @@
   </div>
 
   <div class="testimoni">
+    <span class="nom">Pere</span>
+    <span class="cognoms">Bruach Utzet</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Peret Ros</em>.</span>
+  </div>
+
+  <div class="testimoni">
     <span class="nom">Isabel</span>
     <span class="cognoms">Busqueta Fuertes</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Macià</em>.</span>
@@ -149,7 +155,13 @@
   
   <div class="testimoni">
     <span class="nom">Lidia</span>
-    <span class="cognoms">Grané Calvo</span>
+    <span class="cognoms">Grané Calvó</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Picarrocs</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Vicenç</span>
+    <span class="cognoms">Grané Calvó</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Picarrocs</em>.</span>
   </div>
 
@@ -239,7 +251,7 @@
   <div class="testimoni">
     <span class="nom">Mercè</span>
     <span class="cognoms">Rusiñol Font</span>
-    <span class="renom"></span>
+    <span class="renom">de&nbsp;&nbsp;<em>Ca la Mudeta</em>.</span>
   </div>
 
   <div class="testimoni">
