--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -404,13 +404,13 @@ Cal Jaques</td>
 </tr>
 <tr>
     <td>89</td>
-    <td>Cal Jordi</td>
+    <td>Ca la Filomena</td>
     <td></td>
 </tr>
 <tr>
     <td>91</td>
     <td><button class="info-link" onclick="openInfo('cal-cesc-de-can-roure')">Cal Cesc de can Roure</button></td>
-    <td></td>
+    <td>Cal Jordi</td>
 </tr>
 <tr>
     <td>95</td>
@@ -801,7 +801,7 @@ Cal Guerresenyo</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=19092025"></script>
+<script src="js/info-panels.js?v=22092025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
