--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -614,7 +614,17 @@ Cal Xispa</td>
 <tr>
     <td>12</td>
     <td><button class="info-link" onclick="openInfo('cal-cot')">Cal Cot</button></td>
+    <td>Ca la Naspa</td>
+</tr>
+<tr>
+    <td>13</td>
+    <td>Ca la Lola Rossa</td>
     <td></td>
+</tr>
+<tr>
+    <td>14</td>
+    <td><button class="info-link" onclick="openInfo('cal-peret-ros')">Cal Peret Ros</button></td>
+    <td>Cal Mero</td>
 </tr>
 <tr>
     <td>15</td>
@@ -636,7 +646,7 @@ Cal Guerresenyo</td>
 <tr>
     <td>23</td>
     <td><button class="info-link" onclick="openInfo('cal-pauet')">Cal Pauet</button></td>
-    <td></td>
+    <td>Cal la Pietat</td>
 </tr>
 <tr>
     <td>25</td>
@@ -801,7 +811,7 @@ Cal Guerresenyo</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=22092025"></script>
+<script src="js/info-panels.js?v=25092025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
