--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -651,7 +651,7 @@ Cal Guerresenyo</td>
 <tr>
     <td>25</td>
     <td><button class="info-link" onclick="openInfo('cal-natzaret')">Cal Natzaret</button></td>
-    <td>Cal Quim Bardisa</td>
+    <td>Cal Quim Bardissa</td>
 </tr>
 <tr>
     <td>27</td>
@@ -811,7 +811,7 @@ Cal Guerresenyo</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=25092025"></script>
+<script src="js/info-panels.js?v=26092025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
