--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -247,7 +247,7 @@ Cal Peta-peta</td>
 </tr>
 <tr>
     <td>47</td>
-    <td>Cal Pere Bolet</td>
+    <td><button class="info-link" onclick="openInfo('cal-pere-bolet')">Cal Pere Bolet</button></td>
     <td></td>
 </tr>
 <tr>
@@ -811,7 +811,7 @@ Cal Guerresenyo</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=26092025"></script>
+<script src="js/info-panels.js?v=27092025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
