--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -428,7 +428,7 @@ Cal Jaques</td>
 
 <!-- TAULA Sant Isidre -->
 <div class="taula-header">
-  <h3 id="sant-isidre"><em>Carretera de Sant Isidre:</em></h3>
+  <h3 id="sant-isidre"><em>Carrer de Sant Isidre:</em></h3>
   <a href="#llist-carrers" class="back-to-list" title="Tornar al llistat">&#9650;</a>
 </div>
 <table class="taula-renoms">
