--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -155,10 +155,8 @@ Ca la Valencieneta</td>
 </tr>
 <tr>
     <td>27</td>
-    <td><button class="info-link" onclick="openInfo('cal-marco')">Cal Marcó</button></td>
-    <td>Ca la Castissa<br>
-Ca la Meta-meta<br>
-Cal Peta-peta</td>
+    <td><button class="info-link" onclick="openInfo('cal-marcó')">Cal Marcó</button></td>
+    <td>Cal Petapet</td>
 </tr>
 <tr>
     <td>29</td>
@@ -812,7 +810,7 @@ Ca l'Abuela</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=03102025"></script>
+<script src="js/info-panels.js?v=05102025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
