--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -625,7 +625,7 @@ Ca la Doloretes</td>
 </tr>
 <tr>
     <td>31</td>
-    <td><button class="info-link" onclick="openInfo('cal-puató')">Cal Puató</button></td>
+    <td><button class="info-link" onclick="openInfo('cal-puetó')">Cal Puetó</button></td>
     <td>Cal Rajoler</td>
 </tr>
 <tr>
